# flexap

./: .gitignore  Cargo.toml  LICENSE  README.md  config_example.toml
scripts/: assets_install.rs
src/: main.rs
src/config/: mod.rs
src/controller/: base.rs  db.rs  mod.rs  user.rs
src/controller/context/: mod.rs  request.rs  response.rs
src/controller/dto/: login.rs  mod.rs
src/controller/middleware/: body.rs  csrf.rs  mod.rs  user.rs
src/controller/router/: mod.rs  route.rs
src/model/: error.rs  mod.rs
src/model/entity/: mod.rs  user.rs
src/model/service/: mod.rs
src/model/service/db/: mod.rs
src/view/: mod.rs
src/view/helper/: compare.rs  i18n.rs  mod.rs  url.rs
src/view/renderer/: mod.rs  renderer.rs  replacements.rs  template_source.rs
src/view/templates/: footer.hbs  layout.hbs  nav_bar.hbs
src/view/templates/db/: sql.hbs
src/view/templates/user/: login.hbs
web/css/: main.css
