[package]
name = "flexap"
version = "0.2.5"
authors = ["XX <freecoder.xx@gmail.com>"]

exclude = [
    "scripts/*",
    "web/*",
]

[dependencies]
futures = "0.1"
hyper = "0.11"
url = "1.5"
ring = "0.12"
csrf = { git = "https://github.com/XX/rust-csrf", branch = "develop" }
jsonwebtoken = "3"
rust-crypto = "0.2"
data-encoding = "1.2"
handlebars = "0.29"
diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master", features = ["mysql"] }
lazy_static = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.4"
walkdir = "1"
maplit = "0.1"
mime = "0.3"
regex = "0.2"